Development and Promotion offers

--- a/offer/index.html
+++ b/offer/index.html
@@ -22,14 +22,14 @@
         "contentUrl": "https://wrioos.com/offer/img/promotion.jpg",
         "about": "Promote and get a reward",
         "text": [
-        "Coming."
+        "Every person that contributes to the promotion of the project will receive a reward proportional to the number of likes, shares and comments. Just send us a link to your twit or post in any other social media with the information about the project to info@webrunes.com. After we receive you message we’ll send you an access key to the wallet with the reward."
         ],
         "mentions": [
         {
         "@type": "Article",
         "name": "",
-        "about": "Github.",
-        "url": "https://github.com/webRunes/?'Alternative':3,366"
+        "about": "Contact us!",
+        "url": "mailto:info@webrunes.com?'info@webrunes.com':3,251"
         }
         ]
         },
@@ -40,14 +40,28 @@
         "contentUrl": "https://wrioos.com/offer/img/development.jpg",
         "about": "Develop and get a reward",
         "text": [
-        "Coming."
+        "An open source code project. Any one can take part in the development of the project and receive WRG as a reward for completing each task.",
+        "If you would like to joint the developers team, write us to info@webrunes.com.",
+        "In time, every closed issue will be paid automatically."
         ],
         "mentions": [
         {
         "@type": "Article",
         "name": "",
         "about": "Github.",
-        "url": "https://github.com/webRunes/?'Alternative':3,366"
+        "url": "https://github.com/webRunes/?'development of the project':3,58,external"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "webGold is a P2P decentralized cryptocurrency based on Ethereum Classic blockchain technology. It is identified either by symbol ⊙, or by WRG. Character 'R' in the abbreviation is a credit for the webRunes development team. The currency is distributed under Open Copyright license.",
+        "url": "https://webgold.wrioos.com/?'development of the project':3,97"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "Contact us!",
+        "url": "mailto:info@webrunes.com?'info@webrunes.com':4,60"
         }
         ]
         }
