--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
         "name": "DAO",
         "description": "The page contains links to sections with all information on the structure, finances and development strategy of WRIO Internet OS.",
         "image": "https://wrioos.com/img/cover1-200x200.jpg",
-        "url": "https://wrioos.com/dao"
+        "url": "https://wrioos.com/dao/"
         }
         ]
         }
