--- a/offer/index.html
+++ b/offer/index.html
@@ -22,7 +22,7 @@
         "contentUrl": "https://wrioos.com/offer/img/promotion.jpg",
         "about": "Promote and get a reward",
         "text": [
-        "Every person that contributes to the promotion of the project will receive a reward proportional to the number of likes, shares and comments. Just send us a link to your twit or post in any other social media with the information about the project to info@webrunes.com. After we receive you message we’ll send you an access key to the wallet with the reward.",
+        "Every person that contributes to the promotion of the project will receive a reward proportional to the number of likes, shares and comments. Just send us a link to your tweet or post in any other social media with the information about the project. After we receive you message we’ll send you an access key to the wallet with the reward.",
         "* x10 WRG per share, retweet, like and comment"
         ],
         "mentions": [
@@ -30,7 +30,7 @@
         "@type": "Article",
         "name": "",
         "about": "Contact us!",
-        "url": "mailto:info@webrunes.com?'info@webrunes.com':3,251"
+        "url": "mailto:info@webrunes.com?'send us a link':3,147"
         }
         ]
         },
