Promotion link added to email

--- a/offer/index.html
+++ b/offer/index.html
@@ -30,7 +30,7 @@
         "@type": "Article",
         "name": "",
         "about": "Contact us!",
-        "url": "mailto:info@webrunes.com?'send us a link':3,147"
+        "url": "mailto:info@webrunes.com?subject=Promotion link?'send us a link':3,147"
         }
         ]
         },
