--- a/offer/index.html
+++ b/offer/index.html
@@ -23,7 +23,7 @@
         "about": "Promote and get a reward",
         "text": [
         "Every person that contributes to the promotion of the project will receive a reward proportional to the number of likes, shares and comments. Just send us a link to your tweet or post in any other social media with the information about the project. After we receive you message we’ll send you an access key to the wallet with the reward.",
-        "* x10 WRG per share, retweet, like and comment. MAX 2 500 WRG"
+        "* x10 WRG per share, retweet, like and comment. MAX 2,500 WRG"
         ],
         "mentions": [
         {
