--- a/dao/dao-stack/index.html
+++ b/dao/dao-stack/index.html
@@ -27,7 +27,7 @@
         "inLanguage": "En",
         "name": "Core",
         "about": "Using the Core application you’ll be able to create posts on the basis of content from social media, personal pages and web 3.0 hubs. All created pages will be based on the semantics, which will determine high “organic” rating of your content in search queries.",
-        "image": "https://core.wrioos.com/img/cover1-200x200.jpg",
+        "image": "https://core.wrioos.com/img/cover1-200x200.png",
         "url": "https://core.wrioos.com"
         },
         {
