financing_strategy -> financing_and_promotion_strategy

--- a/dao/index.html
+++ b/dao/index.html
@@ -35,10 +35,10 @@
         },
         {
         "@type": "Article",
-        "name": "Financing Strategy",
+        "name": "Financing and Promotion Strategy",
         "about": "The page contains a brief description of the financing and promotion strategy. In time it well be filled with more details.",
         "image": "https://wrioos.com/dao/img/financing_strategy-200x200.png",
-        "url": "https://wrioos.com/dao/financing_strategy"
+        "url": "https://wrioos.com/dao/financing_and_promotion_strategy"
         },
         {
         "@type": "Article",
