--- a/dao/financing_and_promotion_strategy/index.html
+++ b/dao/financing_and_promotion_strategy/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="webRunes">
     <meta name="keywords" content="WRIO Internet OS, financing strategy">
-    <title>Financing Strategy</title>
+    <title>Financing and Promotion Strategy</title>
 
     <script type="application/ld+json">
         {
@@ -16,7 +16,7 @@
         "@type": "Article",
         "inLanguage": "En",
         "keywords": "WRIO Internet OS, DAO, financing strategy",
-        "name": "Financing Strategy",
+        "name": "Financing and Promotion Strategy",
         "about": "The page contains a brief description of the financing and promotion strategy. In time it well be filled with more details.",
         "articleBody": [
         "The page contains a brief description of the financing and promotion strategy. In time it well be filled with more details."
