--- a/offer/index.html
+++ b/offer/index.html
@@ -41,7 +41,7 @@
         "contentUrl": "https://wrioos.com/offer/img/development.jpg",
         "about": "Develop and get a reward",
         "text": [
-        "An open source code project. Any one can take part in the development of the project and get a reward as an equity or WRG per completed task. That's right! No vesting, no cliff. $45/hour = 300 company tokens = 0.001% or 1125 WRG",
+        "An open source code project. Any one can take part in the development of the project and get a reward as an equity or webGold (WRG) per completed task. That's right! No vesting, no cliff. $45/hour = 300 company tokens = 0.001% or 1125 WRG",
         "If you would like to join the developers team, contact us info@webrunes.com."
         ],
         "mentions": [
@@ -55,13 +55,13 @@
         "@type": "Article",
         "name": "",
         "about": "Attracting investments through the issue of new tokens is directly related to the factor. The factor is a multiplier, which value is based on reasonably anticipated development perspectives in view of the rating dynamics. The rating is, first of all, a value that reflects the level of popularity and trust, which has a direct impact on how fast new users can be attracted, and correspondingly determines the cost of the DAO’s tokens. Thus, the change of the rating between rounds is the key benchmark for calculating the next round factor.",
-        "url": "https://wrioos.com/dao/investments_and_tokens/#Series_A Details?'company tokens':3,193"
+        "url": "https://wrioos.com/dao/investments_and_tokens/#Series_A Details?'an equity':3,105"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "webGold is an anonymous and secure P2P decentralized crypto currency based on Ethereum Classic blockchain technology. It has a stable exchange rate, based on the gold standard: 1,000 WRG = 1g of gold. It is identified either by symbol ⊙, or by WRG. Character 'R' in the abbreviation is a credit for the webRunes development team.",
-        "url": "https://webgold.wrioos.com/?'WRG':3,220"
+        "url": "https://webgold.wrioos.com/?'webGold':3,118"
         },
         {
         "@type": "Article",
