--- a/offer/index.html
+++ b/offer/index.html
@@ -41,7 +41,7 @@
         "contentUrl": "https://wrioos.com/offer/img/development.jpg",
         "about": "Develop and get a reward",
         "text": [
-        "An open source code project. Any one can take part in the development of the project and get a reward as an equity or webGold (WRG) per completed task. That's right! No vesting, no cliff. $45/hour = 300 company tokens = 0.001% or 1125 WRG",
+        "An open source code project. Any one can take part in the development of the project and get a reward as an equity or webGold (WRG) per completed task. That's right! No vesting, no cliff. $45/hour in equivalent = 300 company tokens (0.001%) or 1125 WRG",
         "If you would like to join the developers team, contact us info@webrunes.com."
         ],
         "mentions": [
@@ -55,7 +55,7 @@
         "@type": "Article",
         "name": "",
         "about": "Attracting investments through the issue of new tokens is directly related to the factor. The factor is a multiplier, which value is based on reasonably anticipated development perspectives in view of the rating dynamics. The rating is, first of all, a value that reflects the level of popularity and trust, which has a direct impact on how fast new users can be attracted, and correspondingly determines the cost of the DAO’s tokens. Thus, the change of the rating between rounds is the key benchmark for calculating the next round factor.",
-        "url": "https://wrioos.com/dao/investments_and_tokens/#Series_A Details?'an equity':3,105"
+        "url": "https://wrioos.com/dao/investments_and_tokens/#Series_A?'an equity':3,105"
         },
         {
         "@type": "Article",
