JSON-LD http->https

--- a/dao/index.html
+++ b/dao/index.html
@@ -12,7 +12,7 @@
 
     <script type="application/ld+json">
         {
-        "@context": "http://schema.org",
+        "@context": "https://schema.org",
         "@type": "ItemList",
         "name": "DAO",
         "description": "The page contains links to sections with all information on the structure, finances and development strategy of WRIO Internet OS.",
