--- a/ru/index.html
+++ b/ru/index.html
@@ -669,7 +669,7 @@
 
     <script type="application/ld+json">
         {
-        "@context": "http://schema.org",
+        "@context": "https://schema.org",
         "@type": "ItemList",
         "name": "DAO",
         "itemListElement": [
