--- a/ru/дао/index.html
+++ b/ru/дао/index.html
@@ -12,7 +12,7 @@
 
     <script type="application/ld+json">
         {
-        "@context": "http://schema.org",
+        "@context": "https://schema.org",
         "@type": "ItemList",
         "name": "ДАО",
         "description": "Страница содержит ссылки на разделы со всей информацией по структуре, финансам и стратегии развития ДАО WRIO Internet OS.",
