--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         "@type": "Article",
         "name": "Thanks coins",
         "articleBody": [
-        "Thanks coins (THX) are the tokens of WRIO OS platform. They can be used to receive and make donations. Thus, THX are some sort of non-flat likes, the amount of which reflects the measure of your approval and gratitude for the content created by an author. Through to spring 2017 authors will receive 100% of the amount donated by you, and you’ll be able to receive 10 THX every hour free of charge by clicking “Get free Thanks coins” in the Comments section on any page with enabled comments, including this one.",
+        "Thanks coins (THX) are the tokens of WRIO OS platform. They can be used to receive and make donations. Thus, THX are some sort of non-flat likes, the amount of which reflects the measure of your approval and gratitude for the content created by an author. Through to spring 2017 you’ll be able to receive 10 THX every hour free of charge by clicking “Get free Thanks coins” in the Comments section on any page with enabled comments, including this one.",
         "Soon THX will be used to get additional services that will enhance your opportunities: premium account, post boost, placement of ads and etc.",
         "A WRIO OS Stock Exchange is scheduled to be launched in 2017. Stock Exchange will offer WRG / THX pair. A preliminary exchange rate is set as 1:1.",
         "Details will be provided later."
@@ -639,7 +639,7 @@
 
     <script type="application/ld+json">
         {
-        "@context": "http://schema.org",
+        "@context": "https://schema.org",
         "@type": "ItemList",
         "name": "DAO",
         "itemListElement": [
