Demo hub URL added

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
         {
         "@type": "Article",
         "name": "Thanks coins (THX)",
-        "about": "Thanks coins are the tokens of WRIO OS platform. The crypto currency mining is based on the concept of PoS (proof of social) — you are able to receive 10 THX coin every hour free of charge by clicking “Get free Thanks coins” in the Comments section on any page with enabled comments, including this one. They can be used to receive and make donations. Thus, THX are some sort of non-flat likes, the amount of which reflects the measure of your approval and gratitude for the content created by an author. Though the initial cost of THX coins is not high (see below), in case of a good many of donators the amounts become sufficiently large to support authors. Soon THX will be used to get additional services that will enhance your opportunities: premium account, post boost, placement of ads, and etc.",
+        "about": "Thanks coins are the tokens of WRIO OS platform. The crypto currency mining is based on the concept of PoS (proof of social) — you are able to receive 10 THX coin every hour free of charge by clicking “Get free Thanks coins” in the Comments section on any page with enabled comments (check out demo hub). They can be used to receive and make donations. Thus, THX are some sort of non-flat likes, the amount of which reflects the measure of your approval and gratitude for the content created by an author. Though the initial cost of THX coins is not high (see below), in case of a good many of donators the amounts become sufficiently large to support authors. Soon THX will be used to get additional services that will enhance your opportunities: premium account, post boost, placement of ads, and etc.",
         "url": "https://wrioos.com/#Thanks_coins_(THX)?'micropayments':39,241"
         },
         {
@@ -671,7 +671,7 @@
         "@type": "Article",
         "name": "Vsauce",
         "about": "Our World is Amazing. Questions? Ideas? Tweet me: http://www.twitter.com/tweetsauce. Vsauce was created by Michael Stevens in the summer of 2010.",
-        "url": "https://vsauce.wr.io/#Mind_Field_(Featured)?'demo hub':59,300,external"
+        "url": "https://vsauce.wr.io/#Mind_Field_(Featured)?'demo hub':59,294"
         },
         {
         "@type": "Article",
