External flag added

--- a/offer/index.html
+++ b/offer/index.html
@@ -73,7 +73,7 @@
         "@type": "Article",
         "name": "",
         "about": "Contact us!",
-        "url": "mailto:info@webrunes.com?'info@webrunes.com':4,58"
+        "url": "mailto:info@webrunes.com?'info@webrunes.com':4,58,external"
         }
         ]
         }
