Allow local development

--- a/src/devserver/core/core.html
+++ b/src/devserver/core/core.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -16,20 +16,21 @@
 
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-   <!-- <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-80056587-5', 'auto');
-        ga('send', 'pageview');
-    </script> -->
+    <!-- <script>
+         (function (i, s, o, g, r, a, m) {
+             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                 (i[r].q = i[r].q || []).push(arguments)
+             }, i[r].l = 1 * new Date(); a = s.createElement(o),
+             m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+         ga('create', 'UA-80056587-5', 'auto');
+         ga('send', 'pageview');
+     </script> -->
 </head>
 <body>
-    <div id="clientholder"></div>
-    <img src="https://default.wrioos.com/img/loading.gif" id="loadingInd"/>
-    <script type="text/javascript" src="/assets/client.js"></script>
+<div id="clientholder"></div>
+<img src="https://default.wrioos.com/img/loading.gif" id="loadingInd"/>
+<script type="text/javascript" src="http://localhost/common.js"></script>
+<script type="text/javascript" src="http://localhost/core.js"></script>
 </body>
 </html>
