--- a/dao/investments_and_tokens/index.html
+++ b/dao/investments_and_tokens/index.html
@@ -73,7 +73,7 @@
         "articleBody": [
         "New Tokens: 16,000,000 · Total Tokens: 31,000,000 ",
         "Price: 3.75 ☉ · Factor: ↑ x25",
-        "Start: Spring 2018",
+        "Start: Autumn 2017",
         "Status: Not Started"
         ]
         },
