--- a/src/devserver/core/core.html
+++ b/src/devserver/core/core.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Core editor">
     <meta name="author" content="webRunes">
-    <title>Core editor</title>
+    <title>Core iframe</title>
 
     <link href="https://default.wrioos.com/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://default.wrioos.com/css/webrunes.css" rel="stylesheet">
