Local development on port 3033

--- a/src/devserver/core/core.html
+++ b/src/devserver/core/core.html
@@ -30,7 +30,7 @@
 <body>
 <div id="clientholder"></div>
 <img src="https://default.wrioos.com/img/loading.gif" id="loadingInd"/>
-<script type="text/javascript" src="http://localhost/common.js"></script>
-<script type="text/javascript" src="http://localhost/core.js"></script>
+<script type="text/javascript" src="http://localhost:3033/common.js"></script>
+<script type="text/javascript" src="http://localhost:3033/core.js"></script>
 </body>
 </html>
