--- a/src/devserver/titter/titteriframe.html
+++ b/src/devserver/titter/titteriframe.html
@@ -19,8 +19,8 @@
 <body>
 <div id="frame_container"></div>
 <img src="https://default.wrioos.com/img/loading.gif" id="loadingInd"/>
-<script type="text/javascript" src="http://localhost/common.js"></script>
-<script type="text/javascript" src="http://localhost/titter.js"></script>
+<script type="text/javascript" src="http://localhost:3033/common.js"></script>
+<script type="text/javascript" src="http://localhost:3033/titter.js"></script>
 
 </body>
 </html>
