--- a/hub/index.html
+++ b/hub/index.html
@@ -736,8 +736,7 @@
         }
         ],
         "author": "",
-        "editor": "",
-        "comment": ""
+        "comment": "887324909919186944"
         }
     </script>
 
