--- a/src/devserver/core/core.html
+++ b/src/devserver/core/core.html
@@ -10,8 +10,9 @@
     <title>Core iframe</title>
 
     <link href="https://default.wrioos.com/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://default.wrioos.com/css/webrunes.css" rel="stylesheet">
-    <link href="https://default.wrioos.com/css/core.css" rel="stylesheet">
+    <link href="http://localhost:3033/Default-WRIO-Theme/css/material-kit.min.css" rel="stylesheet">
+    <link href="http://localhost:3033/Default-WRIO-Theme/css/wrioos.css" rel="stylesheet">
+    <link href="http://localhost:3033/Default-WRIO-Theme/css/core.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.12.4.js"> </script>
 
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
