Covers and Offers upd

--- a/hub/offer/index.html
+++ b/hub/offer/index.html
@@ -7,73 +7,69 @@
     <meta name="description" content="">
     <meta name="author" content="webRunes">
     <meta name="keywords" content="WRIO Internet OS">
-    <title>Cover</title>
+    <title>Offer</title>
 
     <script type="application/ld+json">
         {
         "@context": "https://schema.org",
         "@type": "ItemList",
-        "name": "Covers",
+        "name": "Offers",
         "itemListElement": [
         {
         "@type": "ImageObject",
-        "name": "Promotion",
+        "name": "Bounty Campaign. Join",
         "thumbnail": "https://wrioos.com/offer/img/promotion-200x200.jpg",
         "contentUrl": "https://wrioos.com/offer/img/promotion.jpg",
-        "about": "Promote and get a webGold reward",
+        "about": "Promote and get a reward",
         "text": [
-        "Every person that contributes to the promotion of the project will receive a reward proportional to the number of likes, shares and comments. Just send us a link to your tweet or post in any other social media with the information about the project. After we receive you message we’ll send you an access key to the wallet with the reward.",
-        "* x10 WRG per share, retweet, like and comment. MAX 2,500 WRG"
+        "Join our Bounty Campaign and help us build the WRIO Internet OS community. Through sharing and promoting WRIO Internet OS on all social media outlets, you will earn webGold for every like, share, repost or comment.",
+        "* x10 WRG per share, retweet, like and comment. MAX 2,500 WRG",
+        "* Total webGold reserved for bounty: 1,000,000 WRG"
         ],
         "mentions": [
         {
         "@type": "Article",
         "name": "",
-        "about": "webGold is an anonymous and secure P2P decentralized crypto currency based on Ethereum Classic blockchain technology. It has a stable exchange rate, based on the gold standard: 1,000 WRG = 1g of gold. It is identified either by symbol ⊙, or by WRG. Character 'R' in the abbreviation is a credit for the webRunes development team.",
-        "url": "https://webgold.wrioos.com/?'webGold':2,18"
-        },
-        {
-        "@type": "Article",
-        "name": "",
-        "about": "Contact us!",
-        "url": "mailto:info@webrunes.com?subject=A Promotion Link?'send us a link':3,147"
+        "about": "Bounty Campaign",
+        "url": "https://goo.gl/1rFUzQ?'Join':1,17,external"
         }
         ]
         },
         {
         "@type": "ImageObject",
-        "name": "Development",
-        "thumbnail": "https://wrioos.com/offer/img/development-200x200.jpg",
-        "contentUrl": "https://wrioos.com/offer/img/development.jpg",
-        "about": "Develop and get a reward",
+        "name": "Crowdsale Registration",
+        "thumbnail": "https://webgold.wrioos.com/img/cover1-200x200.jpg",
+        "contentUrl": "https://webgold.wrioos.com/img/cover1.jpg",
+        "about": "A Special Round · One Time Event",
         "text": [
-        "An open source code project. Any one can take part in the development of the project and get a reward as an equity or webGold (WRG) per completed task. That's right! No vesting, no cliff. $45/hour in equivalent = 300 company tokens (0.001%) or 1125 WRG",
-        "If you would like to join the developers team, contact us info@webrunes.com."
+        "Be one of the first 100 registered users that will have an opportunity to take part in a Special Round 48 Hours prior to the start of the Crowdsale. You will receive an email with instructions how to purchase WRG with a +50% bonus and + extra bonuses.",
+        "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
+        "Reasons to participate:",
+        "* sale of webGold and profit-making with the increase in the rate: unlike other Crowdsales, all raised funds will be used to support webGold exchange rate. This ways webGold can always be sold for the book value. The book value is determined by the ratio of the total number of webGold tokens to the amount raised during the Crowdsale",
+        "* free Airdrop. Crowdsale participants have a unique opportunity to take part in a free distribution of newly issued WRG on a pro rata basis (Proof-of-Stake). Read more in the White Paper",
+        "* unlike the overwhelming majority of other Crowdsales/ICOs we already have a minimum viable product",
+        "* the project is free, yet webGold will be required to purchase additional services: boost posts, offers, premium account, donations and so on.",
+        "* participation in special offers from WRIO OS to acquire premium services and purchase Credits at a lowest price",
+        "* soon after Crowdsale its participants will be able to purchase tokens of first DAOs on special terms, including WRIO Internet OS"
         ],
         "mentions": [
         {
         "@type": "Article",
         "name": "",
-        "about": "Github.",
-        "url": "https://github.com/webRunes/?'development of the project':3,58,external"
+        "about": "Crowdsale Registration",
+        "url": "https://goo.gl/WGvdiu?'Crowdsale Registration':1,0,external"
         },
         {
         "@type": "Article",
-        "name": "",
-        "about": "Attracting investments through the issue of new tokens is directly related to the factor. The factor is a multiplier, which value is based on reasonably anticipated development perspectives in view of the rating dynamics. The rating is, first of all, a value that reflects the level of popularity and trust, which has a direct impact on how fast new users can be attracted, and correspondingly determines the cost of the DAO’s tokens. Thus, the change of the rating between rounds is the key benchmark for calculating the next round factor.",
-        "url": "https://wrioos.com/dao/investments_and_tokens/#Series_A?'an equity':3,105"
+        "name": "White Paper",
+        "about": "Full description of the project including sections related to The Alternative libertarian project. If you still have any questions, please write us to info@webrunes.com, or join the official Slack or Telegram channel.",
+        "url": "https://goo.gl/rVcPCV?'White Paper':7,17,external"
         },
         {
         "@type": "Article",
-        "name": "",
-        "about": "webGold is an anonymous and secure P2P decentralized crypto currency based on Ethereum Classic blockchain technology. It has a stable exchange rate, based on the gold standard: 1,000 WRG = 1g of gold. It is identified either by symbol ⊙, or by WRG. Character 'R' in the abbreviation is a credit for the webRunes development team.",
-        "url": "https://webgold.wrioos.com/?'webGold':3,118"
-        },
-        {
-        "@type": "Article",
-        "name": "",
-        "about": "Contact us!",
-        "url": "mailto:info@webrunes.com?'info@webrunes.com':4,58,external"
+        "name": "Credits",
+        "about": "Credits (CRD) are the tokens of WRIO OS platform.",
+        "url": "https://wrioos.com/index.html#Credits?'Credits':10,88"
         }
         ]
         }
