Tickets moved to Collections

--- a/hub/cover/index.html
+++ b/hub/cover/index.html
@@ -114,8 +114,8 @@
         {
         "@type": "ImageObject",
         "name": "Features for Developer",
-        "thumbnail": "https://wrioos.com/offer/img/cover1-200x200.jpg",
-        "contentUrl": "https://wrioos.com/offer/img/cover_developer.jpg",
+        "thumbnail": "https://wrioos.com/img/cover1-200x200.jpg",
+        "contentUrl": "https://wrioos.com/img/cover_developer.jpg",
         "about": "Blockchain-powered semantic web platform",
         "text": [
         "* browser-driven. WRIO OS guarantees the absence of cross-platform, cross-browser, cross-device, and responsive problems. Frontend development is not required as a ready made set of controls and elements is provided",
