--- a/hub/index.html
+++ b/hub/index.html
@@ -201,65 +201,8 @@
         "If someone regrets that they haven’t become an early adopter of Bitcoin, they have a chance to become one for WRIO Internet OS, and receive and accrue Credits. Even with Bitcoin it wasn’t that easy! But unlike Bitcoin, Ethereum, or any other cryptocurrency, whose mining is based on computer performance, since the emission of CRD does not require power consumption, it isn’t just a “green” cryptocurrency. A user can receive 10* CRD every hour, which is a modest amount for developed countries, but for over a billion of people living for $2 per day the system provides a unique opportunity to get a significant addition to that sum as social miners. As the number of people participating in CRD mining and accrual grows, the system will have a greater impact on the distribution of wealth in the world, since those interested in services provided by WRIO Internet OS will purchase Credits accrued by social miners to pay for them.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "A WRIO Internet OS Stock Exchange is scheduled to be launched in 2018. Stock Exchange will offer WRG / CRD pair. A preliminary exchange rate is set as 1:1, i.e 1,000 CRD = 1g of gold, which at the time of writing this text is an equivalent of $40. The balance between the supply and demand will be correlating the cost of CRD, making the least well-to-do social groups the most active social miners.",
-        "* At a later stage the amount of received CRD will be directly related to the account rating, which will eliminate the stimulus to register fake accounts.",
-        "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏"
+        "* At a later stage the amount of received CRD will be directly related to the account rating, which will eliminate the stimulus to register fake accounts."
         ]
-        },
-        {
-        "@type": "Article",
-        "name": "Team",
-        "about": "We are cypherpunks and popularizers of blanket distribution of cryptography that runs through all our projects. A cypherpunk is any activist advocating widespread use of strong cryptography and privacy-enhancing technologies as a route to social and political change.",
-        "image": "https://webrunes.com/img/team-200x200.jpg",
-        "url": "https://webrunes.com/team/"
-        },
-        {
-        "@type": "Article",
-        "name": "Advanced Guide",
-        "about": "Brief description of the project in one image. Contains the list of drawbacks of todays’ web and ways of their correction, which will be implemented in WRIO Internet OS. Also it provides the operational scheme of the project and roadmap of further developments.",
-        "image": "https://webrunes.com/img/advanced_guide-200x200.jpg",
-        "url": "https://webrunes.com/img/advanced_guide.jpg"
-        },
-        {
-        "@type": "Article",
-        "name": "Pitch Deck",
-        "about": "10-minute presentation providing a detailed description of the project sufficient to answer key questions.",
-        "image": "https://webrunes.com/img/pitch_deck-200x200.jpg",
-        "url": "https://www.youtube.com/watch?v=ntQulTFH7hk"
-        },
-        {
-        "@type": "Article",
-        "name": "White Paper",
-        "about": "Full description of the project including sections related to The Alternative libertarian project. If you still have any questions, please write us to info@webrunes.com, or join the official Slack or Telegram channel.",
-        "image": "https://webrunes.com/img/white_paper-200x200.jpg",
-        "url": "https://goo.gl/rVcPCV"
-        },
-        {
-        "@type": "Article",
-        "name": "Official Slack channel",
-        "about": "You are welcome to become a member of the fast growing WRIO Internet OS community, and to take part in further development of the project!",
-        "image": "https://webrunes.com/img/slack-200x200.jpg",
-        "url": "https://goo.gl/VpUePk"
-        },
-        {
-        "@type": "Article",
-        "name": "Official Telegram channel",
-        "about": "You are welcome to become a member of the fast growing WRIO Internet OS community, and to take part in further development of the project!",
-        "image": "https://webrunes.com/img/telegram-200x200.jpg",
-        "url": "https://t.me/webRunes"
-        },
-        {
-        "@type": "Article",
-        "name": "Bounty Campaign Registration",
-        "about": "Join our Bounty Campaign and help us build the WRIO Internet OS community. Through sharing and promoting WRIO Internet OS on all social media outlets, you will earn WRG for every like, share, repost or comment.",
-        "image": "https://webrunes.com/img/bounty_campaign-200x200.jpg",
-        "url": "https://docs.google.com/forms/d/e/1FAIpQLSfl3sI9uVxbMHkAjv_E_5_KnN9a76u28QRO-lo1qwSRHUfAeQ/viewform"
-        },
-        {
-        "@type": "Article",
-        "name": "Crowdsale Registration",
-        "about": "Be one of the first 100 registered users will have an opportunity to take part in a Special Round 48 Hours prior to the start of the Crowdsale. You will receive an email with instructions how to purchase WRG with a +50% bonus and + extra bonuses. Crowdsale participants have a unique opportunity to take part in a FREE distribution of newly issued WRG.",
-        "image": "https://webrunes.com/img/crowdsale-200x200.jpg",
-        "url": "https://docs.google.com/forms/d/e/1FAIpQLSfe5bYJYayC_ZwmWgHjea-gij5-2MohY5TaOwHT4QhVU_iVnQ/viewform"
         }
         ],
         "mentions": [
@@ -309,14 +252,14 @@
         {
         "@context": "https://schema.org",
         "@type": "ItemList",
-        "name": "DAO",
+        "name": "Collections",
         "itemListElement": [
         {
         "@type": "ItemList",
-        "name": "DAO",
-        "description": "The page contains links to sections with all information on the structure, finances and development strategy of WRIO Internet OS.",
+        "name": "Collections",
+        "description": "No description",
         "image": "https://wrioos.com/img/cover1-200x200.jpg",
-        "url": "https://wrioos.com/dao/"
+        "url": "https://wrioos.com/collections/"
         }
         ]
         }
