--- a/hub/index.html
+++ b/hub/index.html
@@ -257,7 +257,7 @@
         {
         "@type": "ItemList",
         "name": "Collections",
-        "description": "No description",
+        "description": "",
         "image": "https://wrioos.com/img/cover1-200x200.jpg",
         "url": "https://wrioos.com/collections/"
         }
