--- a/hub/collections/index.html
+++ b/hub/collections/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -17,13 +17,6 @@
         "name": "Collections",
         "description": "No description",
         "itemListElement": [
-          {
-          "@type": "Article",
-          "name": "Team",
-          "about": "We are cypherpunks and popularizers of blanket distribution of cryptography that runs through all our projects. A cypherpunk is any activist advocating widespread use of strong cryptography and privacy-enhancing technologies as a route to social and political change.",
-          "image": "https://webrunes.com/img/team-200x200.jpg",
-          "url": "https://webrunes.com/team/"
-          },
           {
           "@type": "Article",
           "name": "Advanced Guide",
@@ -61,18 +54,11 @@
           },
           {
           "@type": "Article",
-          "name": "Bounty Campaign Registration",
-          "about": "Join our Bounty Campaign and help us build the WRIO Internet OS community. Through sharing and promoting WRIO Internet OS on all social media outlets, you will earn WRG for every like, share, repost or comment.",
-          "image": "https://webrunes.com/img/bounty_campaign-200x200.jpg",
-          "url": "https://docs.google.com/forms/d/e/1FAIpQLSfl3sI9uVxbMHkAjv_E_5_KnN9a76u28QRO-lo1qwSRHUfAeQ/viewform"
-          },
-          {
-          "@type": "Article",
-          "name": "Crowdsale Registration",
-          "about": "Be one of the first 100 registered users will have an opportunity to take part in a Special Round 48 Hours prior to the start of the Crowdsale. You will receive an email with instructions how to purchase WRG with a +50% bonus and + extra bonuses. Crowdsale participants have a unique opportunity to take part in a FREE distribution of newly issued WRG.",
-          "image": "https://webrunes.com/img/crowdsale-200x200.jpg",
-          "url": "https://docs.google.com/forms/d/e/1FAIpQLSfe5bYJYayC_ZwmWgHjea-gij5-2MohY5TaOwHT4QhVU_iVnQ/viewform"
-        }
+          "name": "Team",
+          "about": "We are cypherpunks and popularizers of blanket distribution of cryptography that runs through all our projects. A cypherpunk is any activist advocating widespread use of strong cryptography and privacy-enhancing technologies as a route to social and political change.",
+          "image": "https://webrunes.com/img/team-200x200.jpg",
+          "url": "https://webrunes.com/team/"
+          }
         ]
         }
     </script>
