--- a/hub/index.html
+++ b/hub/index.html
@@ -202,8 +202,23 @@
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "A WRIO Internet OS Stock Exchange is scheduled to be launched in 2018. Stock Exchange will offer WRG / CRD pair. A preliminary exchange rate is set as 1:1, i.e 1,000 CRD = 1g of gold, which at the time of writing this text is an equivalent of $40. The balance between the supply and demand will be correlating the cost of CRD, making the least well-to-do social groups the most active social miners.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "* At a later stage the amount of received CRD will be directly related to the account rating, which will eliminate the stimulus to register fake accounts."
+        "* At a later stage the amount of received CRD will be directly related to the account rating, which will eliminate the stimulus to register fake accounts.",
+        "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏"
         ]
+        },
+        {
+        "@type": "Article",
+        "name": "Bounty Campaign Registration",
+        "about": "Join our Bounty Campaign and help us build the WRIO Internet OS community. Through sharing and promoting WRIO Internet OS on all social media outlets, you will earn WRG for every like, share, repost or comment.",
+        "image": "https://webrunes.com/img/bounty_campaign-200x200.jpg",
+        "url": "https://docs.google.com/forms/d/e/1FAIpQLSfl3sI9uVxbMHkAjv_E_5_KnN9a76u28QRO-lo1qwSRHUfAeQ/viewform"
+        },
+        {
+        "@type": "Article",
+        "name": "Crowdsale Registration",
+        "about": "Be one of the first 100 registered users will have an opportunity to take part in a Special Round 48 Hours prior to the start of the Crowdsale. You will receive an email with instructions how to purchase WRG with a +50% bonus and + extra bonuses. Crowdsale participants have a unique opportunity to take part in a FREE distribution of newly issued WRG.",
+        "image": "https://webrunes.com/img/crowdsale-200x200.jpg",
+        "url": "https://docs.google.com/forms/d/e/1FAIpQLSfe5bYJYayC_ZwmWgHjea-gij5-2MohY5TaOwHT4QhVU_iVnQ/viewform"
         }
         ],
         "mentions": [
